--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.53.0",
-    "lucide-react": "^0.263.1",
-    "next": "^14",
     "react": "^18",
     "react-dom": "^18",
-    "resend": "^4.7.0"
-  },
-  "devDependencies": {
+    "next": "14.2.31",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "^14",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "lucide-react": "^0.263.1",
+    "@supabase/supabase-js": "^2.38.0",
+    "resend": "^2.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.2.31"
   }
 }
